# Video_summarizer

./: dataset.py  edges.py  extractor.py  llm.py  main.py  nodes.py  pyproject.toml  run.py  run_app.py  state.py  utils.py  workflow.mmd
models/: models.py  trainer.py
outputs/: chatbot.ready  suspicious_llm_summary_full_20250423_144435.txt  suspicious_llm_summary_full_20250423_152616.txt  suspicious_llm_summary_full_20250726_162356.txt
tools/: blip_tools.py  easy_ocr.py  rag.py  summarize_tools.py
