[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "tesseract>=0.1.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
]
